# TrabalhoCG

./: Arquivo.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Geometria.cpp  Geometria.h  Light.h  Objetos.h  Shader.h  Textura.cpp  TrabalhoFinal.cpp  TrabalhoFinal.h
dependencias/glad/include/glad/: glad.h
dependencias/glad/src/: glad.c
shaders/: light_frag.glsl  light_vert.glsl  triangle_frag.glsl
